# streamlit-playground

./: README.md  accelerometer.py  main.py  pyproject.toml
.streamlit/: config.toml
